@@ -9,6 +9,7 @@
     using AjLanguage;
     using AjLanguage.Commands;
     using AjLanguage.Expressions;
+    using AjLanguage.Language;
 
     [TestClass]
     public class CommandsTests
@@ -89,6 +90,50 @@
 
             Assert.IsNull(environment.GetValue("x"));
             Assert.AreEqual(2, environment.GetValue("y"));
+        }
+
+        [TestMethod]
+        public void ExecuteWhileCommand()
+        {
+            IExpression incrementX = new ArithmeticBinaryExpression(ArithmeticOperator.Add, new ConstantExpression(1), new VariableExpression("x"));
+            IExpression decrementY = new ArithmeticBinaryExpression(ArithmeticOperator.Subtract, new VariableExpression("y"), new ConstantExpression(1));
+            ICommand setX = new SetVariableCommand("x", incrementX);
+            ICommand setY = new SetVariableCommand("y", decrementY);
+            List<ICommand> commands = new List<ICommand>();
+            commands.Add(setX);
+            commands.Add(setY);
+            ICommand command = new CompositeCommand(commands);
+            IExpression yexpr = new VariableExpression("y");
+
+            WhileCommand whilecmd = new WhileCommand(yexpr, command);
+
+            BindingEnvironment environment = new BindingEnvironment();
+
+            environment.SetValue("x", 0);
+            environment.SetValue("y", 5);
+
+            whilecmd.Execute(environment);
+
+            Assert.AreEqual(0, environment.GetValue("y"));
+            Assert.AreEqual(5, environment.GetValue("x"));
+        }
+
+        [TestMethod]
+        public void ExecuteForEachCommand()
+        {
+            IExpression addToX = new ArithmeticBinaryExpression(ArithmeticOperator.Add, new VariableExpression("y"), new VariableExpression("x"));
+            ICommand setX = new SetVariableCommand("x", addToX);
+            IExpression values = new ConstantExpression(new int [] { 1, 2, 3 } );
+
+            ForEachCommand foreachcmd = new ForEachCommand("y", values, setX);
+
+            BindingEnvironment environment = new BindingEnvironment();
+
+            environment.SetValue("x", 0);
+
+            foreachcmd.Execute(environment);
+
+            Assert.AreEqual(6, environment.GetValue("x"));
         }
     }
 }
